# stalwart-reg

./: Cargo.toml  README.md  config_example.toml
src/: api.rs  diceware.rs  main.rs  qr_code.rs
web/: error.html  invite.html  invite_result.html  next.html  register.html  register_casual.html  semantic.min.css  style.css  success.html
